fixed cross browser issue

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
         </form>
     </div>
 
+    <script src="/js/libs/xdLocalStorage.min.js"></script>
     <script src="/js/index.js"></script>
 </body>
 
