--- a/public/chat.html
+++ b/public/chat.html
@@ -68,6 +68,7 @@
     <script src="./js/libs/moment.js"></script>
     <script src="./js/libs/ejs.js"></script>
     <script src="./js/libs/deparam.js"></script>
+    <script src="/js/libs/xdLocalStorage.min.js"></script>
     <script src="/js/chat.js"></script>
 </body>
 
